--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "chat-app",
+  "name": "chat_db",
   "version": "1.0.0",
-  "description": "",
+  "description": "Fullstack Chat App",
   "main": "index.js",
   "scripts": {
-    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
-    "start": "npm run start --prefix backend"
+    "install-all": "npm install --prefix backend && npm install --prefix frontend",
+    "build": "npm run install-all && npm run build --prefix frontend",
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "cd backend && nodemon index.js",
+    "client": "cd frontend && npm run dev"
   },
-  "keywords": [],
+  "dependencies": {
+    "concurrently": "^8.0.0"
+  },
   "author": "",
   "license": "ISC"
 }
